[project]
name = "daily-quote"
version = "0.1.0"
description = ""
authors = [
    {name = "innotion studio"}
]
readme = "README.md"
requires-python = ">=3.12, <4"
dependencies = [
    "notion-client (>=2.3.0,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
